--- a/index.Rmd
+++ b/index.Rmd
@@ -19,7 +19,7 @@ library(htmltools)
 Column {data-width=650}
 -----------------------------------------------------------------------
 
-### Chart A
+### Visualisasi Jaringan Infeksi Pasien COVID-19
 
 ```{r}
 idn.covidtracing <- read.csv("https://docs.google.com/spreadsheets/d/1ma1T9hWbec1pXlwZ89WakRk-OfVUQZsOCFl4FwZxzVw/export?format=csv&gid=0", sep=",", skip = 1)
@@ -27,8 +27,7 @@ idn.covidtracing$Sumber.Kontak <- ifelse(idn.covidtracing$Jenis.kasus == "Impor"
 tracing.network <- idn.covidtracing %>% select(No, Sumber.Kontak)
 tracing.network$Sumber.Kontak <- ifelse(tracing.network$Sumber.Kontak == "", tracing.network$No, as.character(tracing.network$Sumber.Kontak))
 
-simpleNetwork(tracing.network, fontSize = 12, zoom = TRUE) %>% 
-  htmlwidgets::prependContent(htmltools::tags$h1("Indonesia Coronavirus Infection Tracking"))
+simpleNetwork(tracing.network, fontSize = 12, zoom = TRUE)
 ```
 
 Column {data-width=350}
