--- a/index.Rmd
+++ b/index.Rmd
@@ -37,8 +37,6 @@ numtest_color <- "orange"
 sheets_auth(cache = ".kawalcovidauth")
 df <- read_sheet("1ma1T9hWbec1pXlwZ89WakRk-OfVUQZsOCFl4FwZxzVw", sheet = "Statistik Harian") %>% rename(X1 = 1, recovered_daily = 7, recovered_cum = 8, death_cum = 10, death_daily = 9)
 df$X1 <- as.Date(df$X1, format = "%d %b")
-df$daily_neg <- as.integer(df$Negatif - lag(df$Negatif))
-df$perawatan <- as.integer(df$`Dalam Perawatan` - lag(df$`Dalam Perawatan`))
 ```
 
 Statistik Harian
@@ -84,7 +82,7 @@ valueBox(
 ```{r}
 
 valueBox(
-  value = paste(format(sum(df$`Jumlah Tes Harian`, na.rm = TRUE), big.mark = ","), "", sep = " "),
+  value = paste(format(sum(df$`Tes Harian`, na.rm = TRUE), big.mark = ","), "", sep = " "),
   caption = "Jumlah tes yang telah dilakukan",
   icon = "fas fa-vial",
   color = numtest_color
@@ -181,7 +179,7 @@ plot_ly(data = df) %>%
   ) %>%
   add_trace(
     x = ~X1,
-    y = ~`Jumlah Tes Harian`,
+    y = ~`Tes Harian`,
     name = "Jumlah test yang dilakukan",
     type = "bar",
     mode = "lines+markers",
