--- a/index.Rmd
+++ b/index.Rmd
@@ -11,8 +11,6 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(message = FALSE, warning = FALSE)
-#------------------ Packages ------------------
 library(tidyverse)
 library(flexdashboard)
 library(plotly)
@@ -27,7 +25,9 @@ library(sf)
 library(leaflet)
 library(leafpop)
 #library(readxl)
-#------------------ Parameters ------------------
+```
+
+```{r parameters}
 # Set colors
 # https://www.w3.org/TR/css-color-3/#svg-color
 confirmed_color <- "purple"
@@ -35,13 +35,16 @@ active_color <- "#1f77b4"
 recovered_color <- "forestgreen"
 death_color <- "red"
 numtest_color <- "orange"
-#------------------ Data Indonesia---------------
+```
+
+```{r data}
 # designate project-specific cache
-options(gargle_oauth_cache = ".kawalcovidauth", gargle_oauth_email = "mail.aldilas@gmail.com")
-gs4_auth(cache = ".kawalcovidauth")
+#options(gargle_oauth_cache = ".kawalcovidauth", gargle_oauth_email = "mail.aldilas@gmail.com")
+gs4_auth(email = "mail.aldilas@gmail.com")
 df <- read_sheet("1ma1T9hWbec1pXlwZ89WakRk-OfVUQZsOCFl4FwZxzVw", sheet = "Statistik Harian") %>% rename(date = 1, case_daily = 2, case_cum = 5, recovered_daily = 8, recovered_cum = 9, death_daily = 12, death_cum = 13, test_daily = 25)
 df$date <- as.Date(df$date, format = "%d %b")
-#------------------ Data lokal pulau Jawa--------
+
+# Data lokal pulau Jawa
 provCaseCum <- read_sheet("1ma1T9hWbec1pXlwZ89WakRk-OfVUQZsOCFl4FwZxzVw", range = "Timeline!A1:AI130") %>% rename(date = 1)
 provCaseDaily <- read_sheet("1ma1T9hWbec1pXlwZ89WakRk-OfVUQZsOCFl4FwZxzVw", range = "Timeline!A132:AI263", col_names = TRUE) %>% rename(date = 1)
 provCaseDaily[is.na(provCaseDaily)] <- 0
@@ -54,6 +57,7 @@ provCaseDat[7,1] <- "Daerah Khusus Ibukota Jakarta"
 idn <- read_sf("D:/Analisis Data Transaksi Halodoc/idn_map/Indonesia_Polygon.shp")
 provCaseDat <- provCaseDat %>% pivot_longer(cols = -`Provinsi Asal`, names_to = "type")
 provCaseMap <- merge(idn, provCaseDat, all = TRUE)
+
 #Google Mobility data
 mobility <- read_csv("Global_Mobility_Report.csv") %>% filter(sub_region_1 == "Special Region of Yogyakarta")
 ```
